--- a/index.html
+++ b/index.html
@@ -7,16 +7,15 @@
     <title>Running</title>
     <link rel="stylesheet" href="assets/stylesheet/main.css">
 </head>
-<body>
+<body> 
+    <audio src="assets/Timber - Pitbull_ Ke_ha.mp3" autoplay  loop></audio>
+    <div class="star"></div>
      <div class="night">
          <div class="moon">
-
          </div>
          <div class="city">
-             
-         </div>
+         </div> 
      </div>
-    <audio src="assets/Timber - Pitbull_ Ke_ha.mp3" autoplay  loop></audio>
     <img class="grass2" src="assets/image/—Pngtree—hand-painted dreamy meadow full of_5632145.png">
     <div class="container">
          <div class="shadow"></div>
